fixes after review

--- a/index.html
+++ b/index.html
@@ -240,5 +240,6 @@
   <script src="js/validation.js"></script>
   <script src="js/scale.js"></script>
   <script src="js/effect.js"></script>
+  <script src="js/image-uploading.js"></script>
 </body>
 </html>
