load the pictures

--- a/index.html
+++ b/index.html
@@ -234,6 +234,7 @@
   </template>
   <script src="js/main.js"></script>
   <script src="js/number-generator.js"></script>
+  <script src="js/load.js"></script>
   <script src="js/data.js"></script>
   <script src="js/picture.js"></script>
   <script src="js/preview.js"></script>
