--- a/index.html
+++ b/index.html
@@ -56,7 +56,7 @@
                   </div>
 
                   <!-- Изменение глубины эффекта, накладываемого на изображение -->
-                  <fieldset class="img-upload__effect-level  effect-level">
+                  <fieldset class="img-upload__effect-level  effect-level hidden">
                     <input class="effect-level__value" type="number" name="effect-level" value="100">
                     <div class="effect-level__line">
                       <button class="effect-level__pin" type="button">Кнопка изменения глубины эффекта фотографии</button>
