--- a/index.html
+++ b/index.html
@@ -244,6 +244,7 @@
   <script src="js/validation.js"></script>
   <script src="js/scale.js"></script>
   <script src="js/effect.js"></script>
+  <script src="js/upload.js"></script>
   <script src="js/image-uploading.js"></script>
 </body>
 </html>
