--- a/index.html
+++ b/index.html
@@ -232,19 +232,6 @@
   <template id="messages">
     <div class="img-upload__message  img-upload__message--loading">Загружаем...</div>
   </template>
-  <script src="js/util.js"></script>
-  <script src="js/main.js"></script>
-  <script src="js/load.js"></script>
-  <script src="js/thumbnails.js"></script>
-  <script src="js/debounce.js"></script>
-  <script src="js/filter.js"></script>
-  <script src="js/preview.js"></script>
-  <script src="js/render.js"></script>
-  <script src="js/picture.js"></script>
-  <script src="js/validation.js"></script>
-  <script src="js/scale.js"></script>
-  <script src="js/effect.js"></script>
-  <script src="js/upload.js"></script>
-  <script src="js/image-uploading.js"></script>
+  <script src="./bundle.js"></script>
 </body>
 </html>
